--- a/react-query-demo/package.json
+++ b/react-query-demo/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.85.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
